--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,12 @@ body {
     height: 200px;
 }
 
+.container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: #ce3434;
+                font-family: monospace;
+                padding-top: 60px;
+                padding-left: 80px;
+                padding-right: 80px;
+            }
